--- a/hotel.html
+++ b/hotel.html
@@ -106,9 +106,9 @@
             <li>Orchard Hotel - $180 <span class="text-yellow-500">★ 4.2</span></li>
             <li>Sentosa Resort - $230 <span class="text-yellow-500">★ 4.5</span></li>
           </ul>
-          <button class="mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+          <a href="./booking1.html"><button class="mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
             Book Now
-          </button>
+          </button></a>
         </div>
       </div>
 
@@ -123,9 +123,9 @@
             <li>The St. Regis - $210 <span class="text-yellow-500">★ 4.4</span></li>
             <li>Trident Nariman Point - $190 <span class="text-yellow-500">★ 4.6</span></li>
           </ul>
-          <button class="mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+          <a href="./booking1.html"><button class="mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
             Book Now
-          </button>
+          </button></a>
         </div>
       </div>
 
@@ -140,9 +140,9 @@
             <li>ITC Gardenia - $200 <span class="text-yellow-500">★ 4.4</span></li>
             <li>Taj West End - $240 <span class="text-yellow-500">★ 4.7</span></li>
           </ul>
-          <button class="mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+          <a href="./booking1.html"><button class="mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
             Book Now
-          </button>
+          </button></a>
         </div>
       </div>
 
@@ -157,9 +157,9 @@
             <li>Pod Times Square - $180 <span class="text-yellow-500">★ 4.3</span></li>
             <li>YOTEL NYC - $220 <span class="text-yellow-500">★ 4.1</span></li>
           </ul>
-          <button class="mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+          <a href="./booking1.html"><button class="mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
             Book Now
-          </button>
+          </button></a>
         </div>
       </div>
 
@@ -174,9 +174,9 @@
             <li>ITC Kakatiya - $140 <span class="text-yellow-500">★ 4.3</span></li>
             <li>Novotel HICC - $170 <span class="text-yellow-500">★ 4.2</span></li>
           </ul>
-          <button class="mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+          <a href="./booking1.html"><button class="mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
             Book Now
-          </button>
+          </button></a>
         </div>
       </div>
 
@@ -191,9 +191,9 @@
             <li>One King West - $200 <span class="text-yellow-500">★ 4.4</span></li>
             <li>The Hazelton Hotel - $280 <span class="text-yellow-500">★ 4.7</span></li>
           </ul>
-          <button class="mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+          <a href="./booking1.html"><button class="mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
             Book Now
-          </button>
+          </button></a>
         </div>
       </div>
 
@@ -208,9 +208,9 @@
             <li>Atlantis The Palm - $420 <span class="text-yellow-500">★ 4.8</span></li>
             <li>Jumeirah Beach Hotel - $350 <span class="text-yellow-500">★ 4.6</span></li>
           </ul>
-          <button class="mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+          <a href="./booking1.html"><button class="mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
             Book Now
-          </button>
+          </button></a>
         </div>
       </div>
 
@@ -225,9 +225,9 @@
             <li>Claridge’s - $370 <span class="text-yellow-500">★ 4.8</span></li>
             <li>The Ritz - $410 <span class="text-yellow-500">★ 4.9</span></li>
           </ul>
-          <button class="mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+          <a href="./booking1.html"><button class="mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
             Book Now
-          </button>
+          </button></a>
         </div>
       </div>
 
@@ -242,9 +242,9 @@
             <li>Zostel Gokarna - $90 <span class="text-yellow-500">★ 4.1</span></li>
             <li>Sanskruti Resort - $130 <span class="text-yellow-500">★ 4.2</span></li>
           </ul>
-          <button class="mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
+          <a href="./booking1.html"><button class="mt-2 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition">
             Book Now
-          </button>
+          </button></a>
         </div>
       </div>
 
