--- a/stays.html
+++ b/stays.html
@@ -98,15 +98,15 @@
     <div class="grid grid-cols-1 md:grid-cols-3 gap-6 p-6 w-fit mx-auto">
       <div class="bg-blue-300 p-4 rounded-md shadow hover:shadow-lg transition text-center">
         <h3 class="font-semibold mb-2">Travel across the country with these mind blowing deals</h3>
-        <a href="#" class="text-blue-900 font-bold">Shop flights →</a>
+        <a href="./flights.html" class="text-blue-900 font-bold">Shop flights →</a>
       </div>
       <div class="bg-blue-300 p-4 rounded-md shadow hover:shadow-lg transition text-center">
         <h3 class="font-semibold mb-2">You can save when you bundle flight + hotel together</h3>
-        <a href="#" class="text-blue-900 font-bold">Book now →</a>
+        <a href="./hotel.html" class="text-blue-900 font-bold">Book now →</a>
       </div>
       <div class="bg-blue-300 p-4 rounded-md shadow hover:shadow-lg transition text-center">
         <h3 class="font-semibold mb-2">Members save 5% at 12,000 hotels worldwide</h3>
-        <a href="#" class="text-blue-900 font-bold">Treat yourself →</a>
+        <a href="./hotel.html" class="text-blue-900 font-bold">Treat yourself →</a>
       </div>
     </div>
   </div>
