--- a/assist.html
+++ b/assist.html
@@ -116,7 +116,7 @@
   <section class="bg-indigo-900 text-white text-center py-16 px-4">
     <h2 class="text-3xl font-semibold">About Us</h2>
     <p class="mt-4 max-w-xl mx-auto">With Vinodhayathra, hotels of any size can go fully digital — and give a smarter travel experience to guests.</p>
-    <a href="#" class="inline-block mt-6 bg-white text-orange-500 font-semibold py-2 px-4 rounded hover:text-orange-600">Read More</a>
+    <a href="./index.html" class="inline-block mt-6 bg-white text-orange-500 font-semibold py-2 px-4 rounded hover:text-orange-600">Read More</a>
   </section>
 
   <section class="bg-gray-100 py-16 px-4">
