--- a/adventures1.html
+++ b/adventures1.html
@@ -83,7 +83,7 @@
 <!--banner-->
 
 <div
-    class="opacity-80 w-full h-64 md:h-90 bg-[url('https://cdn11.bigcommerce.com/s-34mbaxq6h1/images/stencil/1280w/carousel/10/Sawyer-Oars-Banner.jpg?c=1')] bg-cover bg-center">
+    class="opacity-80 w-full h-64 md:h-90 bg-[url('https://mndsamndsouthaustralia.blob.core.windows.net/assets/uploads/img/carousel/Home-Page-Banner.png')] bg-cover bg-center">
   </div>
 
         <!-- Main Content -->
