--- a/services.html
+++ b/services.html
@@ -82,7 +82,7 @@
 
   <!-- Header -->
   <div class="bg-cover opacity-70 flex justify-center items-center text-center h-[40vh] px-4"
-    style="background-image: url('https://www.shutterstock.com/image-photo/passenger-aircraft-blue-cloudy-sky-260nw-1472463215.jpg')">
+    style="background-image: url('https://flywith.virginatlantic.com/content/dam/flying-club/Brand%20Manifesto%20banner%202316x696.jpg')">
     <h1 class="text-4xl text-black-500 md:text-5xl font-bold drop-shadow-lg opacity-90">
       Explore the World with Vinodhayatra
     </h1>
